--- a/Resources/Private/Language/locallang_module_documentation.xlf
+++ b/Resources/Private/Language/locallang_module_documentation.xlf
@@ -4,13 +4,13 @@
         <header/>
         <body>
             <trans-unit id="mlang_labels_tablabel" resname="mlang_labels_tablabel">
-                <source>DEV: Docs</source>
+                <source>Documentations</source>
             </trans-unit>
             <trans-unit id="mlang_labels_tabdescr" resname="mlang_labels_tabdescr">
-                <source>DEV: Docs</source>
+                <source>Fast access to the documentations</source>
             </trans-unit>
             <trans-unit id="mlang_tabs_tab" resname="mlang_tabs_tab">
-                <source>DEV: Docs</source>
+                <source>Documentations</source>
             </trans-unit>
         </body>
     </file>
